Fixed Empty result set . Now shows the message that the search returned no results.

--- a/src/main/webapp/resources/css/pif.css
+++ b/src/main/webapp/resources/css/pif.css
@@ -74,7 +74,7 @@ h2 {
 }
 
 h3 {
-    color: #000000;
+    color: #F30;
     font-family: UniversLTStd-BoldCn,UniversCondensed,Helvetica,sans-serif;
     font-size: 18px;
     font-weight: bold;
